--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.cloud.gateway.discovery.locator.enabled=true
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.instance.hostname=localhost
-spring.cloud.discovery.enabled=true
-spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
+
+#spring.cloud.discovery.enabled=true
+#spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
