--- a/currency-exchange-service/pom.xml
+++ b/currency-exchange-service/pom.xml
@@ -61,6 +61,11 @@
 			<artifactId>resilience4j-spring-boot2</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.github.resilience4j</groupId>
+			<artifactId>resilience4j-circuitbreaker</artifactId>
+			<version>1.7.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
