--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -4,8 +4,11 @@ spring.config.import=optional:configserver:http://localhost/8881
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
-#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-#eureka.instance.hostname=localhost
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
 resilience4j.retry.instances.sample-api.maxAttempts=5
 resilience4j.retry.instances.sample-api.waitDuration=1s
 resilience4j.retry.instances.sample-api.enableExponentialBackoff=true
+
+
+resilience4j.circuitbreaker.instances.sample-api.wait-duration-in-open-state=3000
